tối ưu dịch kéo thả
hiện tại khi kích hoạt dịch kéo thả thì nội dung lần dịch cũ sẽ bị xóa.

--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "ocr_languages": [
         "ch_sim"
     ],
-    "translator": "Google",
+    "translator": "Gemini",
     "openrouter_api_key": "",
     "gemini_api_key": "",
     "gemini_model": "gemini-2.0-flash-lite",
