--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "ocr_languages": [
         "en"
     ],
-    "translator": "Gemini",
+    "translator": "Google",
     "openrouter_api_key": "sk",
     "gemini_api_key": "",
     "gemini_model": "gemini-2.0-flash-lite",
@@ -31,7 +31,7 @@
     "language_filter_enabled": false,
     "dest_lang": "vi",
     "dest_lang_custom_enabled": false,
-    "ocr_engine": "Gemini",
+    "ocr_engine": "EasyOCR",
     "gemini_ocr_api_key": "",
     "gemini_ocr_model": "gemini-2.5-flash-lite"
 }
